--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,10 +1,5 @@
-{% for page in site.pages %}
-    {% if page.tags contains "about" %}
-        <a href="{{ page.url }}">{{ page.title }}</a>
-    {% endif %}
-{% endfor %}
-{% for page in site.pages %}
-    {% if page.tags contains "contact" %}
-        <a href="{{ page.url }}">{{ page.title }}</a>
-    {% endif %}
-{% endfor %}
+<a href="{{ site.baseurl }}/">Home</a>
+<a href="{{ site.baseurl }}/about/">About</a>
+<a href="{{ site.baseurl }}/assets/Karan-Bavishi-Resume-Aug-2016.pdf">CV</a>
+<a href="{{ site.baseurl }}/blog/">Blog</a>
+<a href="{{ site.baseurl }}/contact/">Contact</a>
