--- a/_includes/social_links.html
+++ b/_includes/social_links.html
@@ -1,10 +1,7 @@
 <div class="social-icons">
-  <div class="social-icons-right">
+  <div class="left">
     {% if site.github_username %}
       <a class="fa fa-github" href="https://github.com/{{ site.github_username }}"></a>
-    {% endif %}
-    {% if site.bitbucket_username %}
-      <a class="fa fa-bitbucket" href="https://bitbucket.org/{{ site.bitbucket_username }}"></a>
     {% endif %}
     {% if site.stackoverflow_id %}
       <a class="fa fa-stack-overflow" href="https://stackoverflow.com/users/{{ site.stackoverflow_id }}"></a>
@@ -12,12 +9,6 @@
     <a class="fa fa-rss" href="{{ "/feed.xml" | prepend: site.baseurl }}"></a>
     {% if site.twitter_username %}
       <a class="fa fa-twitter" href="https://twitter.com/{{ site.twitter_username }}"></a>
-    {% endif %}
-    {% if site.skype_username %}
-      <a class="fa fa-skype" href="skype:{{ site.skype_username }}?userinfo"></a>
-    {% endif %}
-    {% if site.steam_nickname %}
-      <a class="fa fa-steam-square" href="http://steamcommunity.com/id/{{ site.steam_nickname }}"></a>
     {% endif %}
     {% if site.google_plus_id %}
       <a class="fa fa-google-plus" href="https://plus.google.com/{{ site.google_plus_id }}/posts"></a>
@@ -27,12 +18,6 @@
     {% endif %}
     {% if site.linkedin_username %}
       <a class="fa fa-linkedin" href="https://www.linkedin.com/in/{{ site.linkedin_username }}"></a>
-    {% endif %}
-    {% if site.angellist_username %}
-      <a class="fa fa-angellist" href="https://angel.co/{{ site.angellist_username }}"></a>
-    {% endif %}
-    {% if site.medium_id %}
-      <a class="fa fa-medium" href="https://medium.com/@{{ site.medium_id }}"></a>
     {% endif %}
   </div>
   <div class="right">
